sprint manager started, tasks can be shown, refactored

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,6 +4,26 @@
     <title>Hacker tracker</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width">
+<!--    <script>-->
+<!--        function setCookie(name, value) {-->
+<!--            document.cookie = name + "=" + value;-->
+<!--        }-->
+
+<!--        function getCookie(name) {-->
+<!--            var allCookies = document.cookie;-->
+<!--            cookiesArr = allCookies.split(';');-->
+
+<!--            for (var i = 0; i < cookiesArr.length; i++) {-->
+<!--                if (cookiesArr[i].split('=')[0] == name) {-->
+<!--                document.write("Value for the key: " + name + "is " + cookiesArr[i].split('=')[1]);-->
+<!--                }-->
+<!--            }-->
+<!--        }-->
+
+<!--        setCookie("name", "NoName");-->
+<!--        getCookie("name");-->
+<!--        setCookie("name", "");-->
+<!--    </script>-->
 </head>
 <body>
 <div class="toolbar_tb">
