--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,6 +4,8 @@
     <title>Hacker tracker</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="/js/main.js" defer></script>
 </head>
 <body>
 <div class="toolbar_tb">
@@ -19,6 +21,5 @@
         </form>
     </div>
 </div>
-<script src="/js/main.js"></script>
 </body>
 </html>
