--- a/src/main/resources/templates/invalid.html
+++ b/src/main/resources/templates/invalid.html
@@ -7,24 +7,8 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<div class="toolbar_tb">
-    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
-    <div>
-        <a class="tb_menubtn" href="/menu">
-            <p class="p10">Menu</p>
-        </a>
-    </div>
-    <div class="tb_user row">
-        <div class="tb_userinfo">
-            <p class="p10" name="email" type="text" th:text="${username}"></p>
-        </div>
-        <div class="tb_logout">
-            <a class="logoutbtn" href="/logout">
-                <p class="p10">Logout</p>
-            </a>
-        </div>
-    </div>
-</div>
+<div th:replace="toolbar :: toolbar"></div>
+
 <a href="/">
     <img src="https://image.shutterstock.com/image-vector/invalid-seal-print-corroded-texture-600w-1232017768.jpg">
 </a>
