--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,6 +4,8 @@
     <title>Hacker tracker</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="/js/main.js" defer></script>
 <!--    <script>-->
 <!--        function setCookie(name, value) {-->
 <!--            document.cookie = name + "=" + value;-->
@@ -26,19 +28,7 @@
 <!--    </script>-->
 </head>
 <body>
-<div class="toolbar_tb">
-    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
-    <div class="tb_user row">
-        <div class="tb_userinfo">
-            <p class="p10" name="email" type="text" th:text="${username}"></p>
-        </div>
-        <div class="tb_logout">
-            <a class="logoutbtn" href="/logout">
-                <p class="p10">Logout</p>
-            </a>
-        </div>
-    </div>
-</div>
+<div th:replace="toolbar :: toolbar"></div>
 
 <div class="menu row">
     <div id="taskBtn">
@@ -71,6 +61,5 @@
         </a>
     </div>
 </div>
-<script src="/js/main.js"></script>
 </body>
 </html>
