--- a/src/main/resources/templates/newComment.html
+++ b/src/main/resources/templates/newComment.html
@@ -11,19 +11,7 @@
     <script defer src="/js/main.js"></script>
 </head>
 <body>
-<div class="toolbar_tb">
-    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
-    <div class="tb_user row">
-        <div class="tb_userinfo">
-            <p class="p10" name="email" type="text" th:text="${username}"></p>
-        </div>
-        <div class="tb_logout">
-            <a class="logoutbtn" href="/logout">
-                <p class="p10">Logout</p>
-            </a>
-        </div>
-    </div>
-</div>
+<div th:replace="toolbar :: toolbar"></div>
 
 <form th:action="@{/newComment}" th:object="${comment}" method="post">
     <textarea th:value="${comment.comment}" name="comment"></textarea>
