--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Success!</title>
@@ -7,24 +7,8 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<div class="toolbar_tb">
-    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
-    <div>
-        <a class="tb_menubtn" href="/menu">
-            <p class="p10">Menu</p>
-        </a>
-    </div>
-    <div class="tb_user row">
-        <div class="tb_userinfo">
-            <p class="p10" name="email" type="text" th:text="${username}"></p>
-        </div>
-        <div class="tb_logout">
-            <a class="logoutbtn" href="/logout">
-                <p class="p10">Logout</p>
-            </a>
-        </div>
-    </div>
-</div>
+<div th:replace="toolbar :: toolbar"></div>
+
 <h1>Success!</h1>
 <a href="/menu">
     <img src="/img/ok.png" style="width:360px;height:200px;">
