--- a/src/main/resources/templates/sprint.html
+++ b/src/main/resources/templates/sprint.html
@@ -10,21 +10,7 @@
     <script src="/js/sprintPage.js" defer></script>
 </head>
 <body>
-<div th:replace="toolbar :: toolbar"></div>
-
-<div class="sprint_menu">
-    <p class="sprintMenuItem">Sprint: </p>
-    <select class="sprintMenuItem sprintSelector" name="sprint" id="sprintId">
-        <option value="0" th:selected="selected">-</option>
-        <option th:block th:each="sprint : ${sprintList}"
-                th:value="${sprint.id}">
-            [[${sprint.name}]]
-        </option>
-    </select>
-    <input type="submit" id="showSprintBtn" value="Show" onclick="show_sprint()">
-    <a href="/sprint/new">
-        <button id="newSprintBtn" class="sprintMenuItem">New sprint</button>
-    </a>
-</div>
+    <div th:replace="toolbar :: toolbar"></div>
+    <div th:replace="sprint-menu__fragment :: sprint-menu"></div>
 </body>
 </html>
