Road map. Thymeleaf do not work =(

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -60,6 +60,12 @@
             <button class="bigbtn">Sprints</button>
         </a>
     </div>
+
+    <div id="roadMapBtn">
+        <a href="/road-map">
+            <button class="bigbtn">Road map</button>
+        </a>
+    </div>
 </div>
 </body>
 </html>
