--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -11,7 +11,7 @@
 <body>
 <div th:replace="toolbar :: toolbar"></div>
 
-<div>
+<div class="taskpage">
     <div>
         <div class="cell">
             <div class="row">
