--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -137,6 +137,13 @@ padding: 3px;
 padding-left: 5px;
 }
 
+.taskpage {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    }
+
 .colname {
 margin: 5px;
 padding: 3px;
@@ -282,3 +289,15 @@ width: 300px;
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+.dashboard {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.notifText {
+    font-size: x-large;
+    text-align: center;
+    }
+
